fix: top spacing

--- a/style/article.css
+++ b/style/article.css
@@ -23,7 +23,7 @@ content {
 }
 
 content h1 {
-    margin-top: calc(var(--rhythm) * 1.5);
+    margin-top: calc(var(--rhythm) * 2.5);
     margin-bottom: calc(var(--rhythm) * .5);
 }
 
